--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+      <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=${import.meta.env.VITE_APP_GOOGLE_MAPS_API_KEY}"></script>
   </body>
 </html>
