--- a/index.html
+++ b/index.html
@@ -1,12 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carefinder</title>
+
+  <!-- Inline critical CSS -->
+  <style>
+    /* Critical styles */
+    body {
+      margin: 0;
+      font-size: 16px;
+      background: var(--color-background-soft);
+      color: var(--color-text);
+      line-height: 1.6;
+      font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    header {
+      background: var(--color-background-soft);
+      padding: 1rem 0;
+      border-bottom: 1px solid var(--color-border);
+    }
+
+    header .container {
+      max-width: 1280px;
+      margin: 0 auto;
+      padding: 0 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+    }
+
+    nav ul li {
+      margin: 0 1rem;
+    }
+
+    nav ul li a {
+      color: var(--color-heading);
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: hsla(160, 100%, 37%, 1);
+    }
+
+    footer {
+      background: var(--color-background-soft);
+      padding: 1rem 0;
+      border-top: 1px solid var(--color-border);
+      text-align: center;
+    }
+
+    footer .container {
+      max-width: 1280px;
+      margin: 0 auto;
+      padding: 0 2rem;
+    }
+
+    /* Loading spinner */
+    #loading {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+      /* or use a color that matches your theme */
+      z-index: 1000;
+    }
+
+    body.loaded #loading {
+      display: none;
+    }
+  </style>
+
+  <!-- Preload main CSS -->
+  <link rel="preload" href="/assets/main.css" as="style" onload="this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="/assets/main.css">
+  </noscript>
+</head>
+
+<body>
+  <!-- Loading spinner -->
+  <div id="loading">Loading...</div>
+
+  <header>
+    <div class="container">
+      <h1>CareFinder</h1>
+      <nav>
+        <a href="/#">Home</a>
+        <a href="/Signup">Signup/Login</a>
+      </nav>
+    </div>
+  </header>
+
+  <main id="app"></main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Carefinder. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script type="module" src="/src/main.ts"></script>
+  <script>
+    // Add the 'loaded' class to the body once everything is fully loaded
+    window.addEventListener('load', function () {
+      document.body.classList.add('loaded');
+    });
+  </script>
+</body>
+
 </html>
