--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <h1>CareFinder</h1>
       <nav>
         <a href="/#">Home</a>
+        <a href="/hospital-search">Hospital Search</a>
         <a href="/Signup">Signup/Login</a>
       </nav>
     </div>
