--- a/index.html
+++ b/index.html
@@ -8,20 +8,52 @@
 
   <!-- Inline critical CSS -->
   <style>
-    /* Critical styles */
+    /* Light and Dark Mode Color Variables */
+    :root {
+      --color-primary: #4CAF50;
+      --color-primary-dark: #388E3C;
+      --color-text-light: #333;
+      --color-text-dark: #ccc;
+      --color-background-light: #f5f5f5;
+      --color-background-dark: #2c2c2c;
+      --color-border-light: #e0e0e0;
+      --color-border-dark: #444;
+      --color-header-footer-bg-light: #ffffff;
+      --color-header-footer-bg-dark: #333333;
+      --color-mobile-menu-bg-light: #ffffff;
+      --color-mobile-menu-bg-dark: #444444;
+      --color-shadow-light: rgba(0, 0, 0, 0.1);
+      --color-shadow-dark: rgba(0, 0, 0, 0.5);
+    }
+
+    /* Dark Mode Settings */
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --color-text-light: #ccc;
+        --color-background-light: var(--color-background-dark);
+        --color-border-light: var(--color-border-dark);
+        --color-header-footer-bg-light: var(--color-header-footer-bg-dark);
+        --color-mobile-menu-bg-light: var(--color-mobile-menu-bg-dark);
+        --color-shadow-light: var(--color-shadow-dark);
+      }
+    }
+
+    /* Global Styles */
     body {
       margin: 0;
       font-size: 16px;
-      background: var(--color-background-soft);
-      color: var(--color-text);
+      background: var(--color-background-light);
+      color: var(--color-text-light);
       line-height: 1.6;
       font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     header {
-      background: var(--color-background-soft);
+      background: var(--color-header-footer-bg-light);
       padding: 1rem 0;
-      border-bottom: 1px solid var(--color-border);
+      border-bottom: 1px solid var(--color-border-light);
+      box-shadow: 0 2px 10px var(--color-shadow-light);
     }
 
     header .container {
@@ -31,10 +63,23 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: relative;
     }
 
-    header h1 {
-      margin: 0;
+    /* Logo Styles */
+    header .logo img {
+      max-width: 120px;
+      /* Adjusted max-width for better fit */
+      max-height: 50px;
+      font-weight: bolder;
+      /* Ensures the logo doesn't exceed the header's height */
+      height: auto;
+    }
+
+    /* Navigation Styles */
+    nav {
+      display: flex;
+      align-items: center;
     }
 
     nav ul {
@@ -42,27 +87,85 @@
       padding: 0;
       margin: 0;
       display: flex;
+      gap: 1.5rem;
     }
 
     nav ul li {
-      margin: 0 1rem;
+      margin: 0;
     }
 
     nav ul li a {
-      color: var(--color-heading);
+      color: var(--color-text-light);
       font-weight: bold;
+      text-decoration: none;
       transition: color 0.3s;
     }
 
     nav ul li a:hover {
-      color: hsla(160, 100%, 37%, 1);
+      color: var(--color-primary-dark);
     }
 
+    /* Hamburger Menu Styles */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .hamburger span {
+      height: 3px;
+      width: 25px;
+      background: var(--color-text-light);
+      margin-bottom: 5px;
+      transition: background 0.3s;
+    }
+
+    /* Mobile Menu */
+    .mobile-menu {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: var(--color-mobile-menu-bg-light);
+      border: 1px solid var(--color-border-light);
+      border-radius: 5px;
+      overflow: hidden;
+      box-shadow: 0px 4px 10px var(--color-shadow-light);
+      z-index: 999;
+      transition: max-height 0.3s ease-in-out;
+      max-height: 0;
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    .mobile-menu.open {
+      max-height: 300px;
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .mobile-menu a {
+      padding: 10px 20px;
+      color: var(--color-text-light);
+      text-decoration: none;
+      border-bottom: 1px solid var(--color-border-light);
+      transition: background 0.3s;
+    }
+
+    .mobile-menu a:hover {
+      background: var(--color-primary);
+      color: var(--color-text-dark);
+    }
+
+    /* Footer Styles */
     footer {
-      background: var(--color-background-soft);
+      background: var(--color-header-footer-bg-light);
       padding: 1rem 0;
-      border-top: 1px solid var(--color-border);
+      border-top: 1px solid var(--color-border-light);
+      box-shadow: 0 -2px 10px var(--color-shadow-light);
       text-align: center;
+      transition: background-color 0.3s;
     }
 
     footer .container {
@@ -71,7 +174,7 @@
       padding: 0 2rem;
     }
 
-    /* Loading spinner */
+    /* Loading Spinner */
     #loading {
       position: fixed;
       top: 0;
@@ -81,13 +184,29 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #fff;
-      /* or use a color that matches your theme */
+      background-color: var(--color-header-footer-bg-light);
       z-index: 1000;
+      transition: background-color 0.3s;
     }
 
     body.loaded #loading {
       display: none;
+    }
+
+    /* Media Queries */
+    @media (max-width: 768px) {
+      .hamburger {
+        display: flex;
+      }
+
+      nav ul {
+        display: none;
+      }
+
+      .mobile-menu {
+        display: flex;
+        flex-direction: column;
+      }
     }
   </style>
 
@@ -104,12 +223,29 @@
 
   <header>
     <div class="container">
-      <h1>CareFinder</h1>
+      <div class="logo">
+        <!-- Replace 'logo.png' with your actual logo file path -->
+        <img src="/src/assets/logo.png" alt="CareFinder Logo">
+      </div>
       <nav>
+        <ul>
+          <li><a href="/#">Home</a></li>
+          <li><a href="/hospital-search">Hospital Search</a></li>
+          <li><a href="/Signup">Signup/Login</a></li>
+        </ul>
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </nav>
+
+      <!-- Mobile Menu -->
+      <div class="mobile-menu" id="mobile-menu">
         <a href="/#">Home</a>
         <a href="/hospital-search">Hospital Search</a>
         <a href="/Signup">Signup/Login</a>
-      </nav>
+      </div>
     </div>
   </header>
 
@@ -117,7 +253,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Carefinder. All rights reserved.</p>
+      <p>&copy;Richard-Mro Carefinder. All rights reserved.</p>
     </div>
   </footer>
 
@@ -126,6 +262,11 @@
     // Add the 'loaded' class to the body once everything is fully loaded
     window.addEventListener('load', function () {
       document.body.classList.add('loaded');
+    });
+
+    // Hamburger menu functionality
+    document.getElementById('hamburger').addEventListener('click', function () {
+      document.getElementById('mobile-menu').classList.toggle('open');
     });
   </script>
 </body>
