--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="container">
       <div class="logo">
         <!-- Replace 'logo.png' with your actual logo file path -->
-        <img src="/src/assets/logo.png" alt="CareFinder Logo">
+        <a href="/#"><img src="/src/assets/logo.png" alt="CareFinder Logo"></a> 
       </div>
       <nav>
         <ul>
