--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carefinder</title>
+  <script type="importmap">
+  {
+    "imports": {
+      "idb": "https://cdn.jsdelivr.net/npm/idb@7.1.1/build/index.js"
+    }
+  }
+  </script>
+
 
   <!-- Inline critical CSS -->
   <style>
