made some ui improvements

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     /* Light and Dark Mode Color Variables */
     :root {
       --color-primary: #4CAF50;
+      --color-hover:  #0e6f30;
       --color-primary-dark: #388E3C;
       --color-text-light: #333;
       --color-text-dark: #ccc;
